<resources>
    <string name="app_name">H-POPO</string>
    <string name="refuse">Cancel</string>
    <string name="accept">Confirm</string>
    <string name="double_click_to_exit">Double click return key to exit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="please_input_phone_number">Please enter your mobile number</string>
    <string name="please_input_email">Please enter your email</string>
    <string name="email_format_error">Email format error</string>
    <string name="please_input_username">Please enter username</string>
    <string name="please_input_password">Please enter new password</string>
    <string name="new_password">New password</string>
    <string name="double_check_password">Confirm password</string>
    <string name="please_input_password_again">Confirm password</string>
    <string name="password_double_check_error">Confirm password error, please check</string>
    <string name="verification_code">Verification code</string>
    <string name="please_input_verification_code">sms verification code</string>
    <string name="forget_password">Forget password</string>
    <string name="have_no_account">Have no account？</string>
    <string name="go_to_register"><u>register one></u></string>
    <string name="login_with_third">Third party login</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="verification_code_had_send">verification code had send</string>
    <string name="password_had_be_change">edit password success</string>
    <string name="email_had_sent">An Email had sent, please check.</string>
    <string name="register">register</string>
    <string name="register_success">Register success</string>
    <string name="i_agree_qingpaopao">I agree</string>
    <string name="user_agreement">user agreement</string>
    <string name="and">and</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="qing_pao_pao_user_privacy_policy">氢泡泡用户注册协议</string>
    <string name="qing_pao_pao_user_privacy_policy_content">\t本协议是您与氢泡泡（以下简称"本平台"，网址：www.sznncai.com）所有者深圳市e租客网
        络科技有限公司（以下简称"氢泡泡公司"）之间就您注册、使用本平台等相关事宜锁定里的协议。\n
    \t在您注册成为本平台用户前请您仔细阅读本协议各项条款，特别是其中重点加粗等黑色字体部分，当您按照页面提示填写资料、阅读本协议并点击本协议下方的"立即注
        册"、"同意"或具有类似功能的按钮后，或您以其他平台允许的方式实际使用本平台服务时，即视为您已完全同意并接受本协议，并愿受其约束，本协议即签署成立并
        生效。届时，您不能以未阅读本协议或对本协议有任何误解为由主张本协议无效或要求撤销本协议。\n
    \t完成注册成为本平台会员的用户，按照以下条款享受本平台提供的服务，并独立承担相应义务。</string>
    <string name="wechat_client_not_exist">Wechat had not install</string>
    <string name="drinking">Drink Water</string>
    <string name="explore">Explore</string>
    <string name="welfare_discounts">福利/优惠</string>
    <string name="mine">Mine</string>
    <string name="score">Bonus point</string>
    <string name="sign_in"><u>Attend</u></string>
    <string name="had_sign_in">Attended</string>
    <string name="sign_in_success">attend success</string>
    <string name="current_drink_quantity">Current water consumption</string>
    <string name="total_drink_quantity">Total water consumption</string>
    <string name="my_drinking">My water consumption</string>
    <string name="my_health">My health</string>
    <string name="information_edit">Modify information</string>
    <string name="invite_friends">Invite friend</string>
    <string name="focus_subtitle">Followed topics</string>
    <string name="history_list">History</string>
    <string name="user_guide">User guide</string>
    <string name="system_setting">System settings</string>
    <string name="my_collect">My collection</string>
    <string name="my_fans">My fans</string>
    <string name="my_focus">My followed topics</string>
    <string name="person_info">Personal information</string>
    <string name="person_info_had_change">Information had edit</string>
    <string name="edit_bind_phone">Modify the bound mobile number</string>
    <string name="edit_bind_third">Third party binding</string>
    <string name="no_binding">Unbound</string>
    <string name="yes_binding">Authorized</string>
    <string name="get_binding_failure">Binding Failure</string>
    <string name="bind_success">Binding Success</string>
    <string name="edit_password">Modify password</string>
    <string name="safe_logout">Log out</string>
    <string name="head_portrait">Cover photo</string>
    <string name="username">Username</string>
    <string name="edit_username">Modify username</string>
    <string name="edit_username_success">Modify username success！</string>
    <string name="save">Save</string>
    <string name="please_input_new_username">Please enter your username</string>
    <string name="email">Email</string>
    <string name="phone_number">Mobile number</string>
    <string name="new_phone_number">New Mobile number</string>
    <string name="new_phone_number_cant_same">The new mobile number is the same as the current number</string>
    <string name="new_password_cant_same">The new password is the same as the current password</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="edit_phone_number_success">Edit phone number success！</string>
    <string name="please_bind_phone_number">Need bound phone number first</string>
    <string name="help_center">Help center</string>
    <string name="service_center">Customer Service</string>
    <string name="wechat_official_number">WeChat public number：wopin2016</string>
    <string name="system_using_introduce">Introduction to system use</string>
    <string name="einstein_talk">如果你无法简洁地表达你的想法，那只能说明你还不够了解它。 —— 阿尔伯特·爱因斯坦</string>
    <string name="app_synopsis">Guangzhou Wopin is an industrial chain service enterprise focusing on research, development, production and sales of technology and health products. With the mission of innovation, technology and healthy living, the company is committed to enabling more people to enjoy the healthy life brought by technology. It is a company focusing on market health technology product research and product sales chain service business.</string>
    <string name="service_phone">Customer service hotline： 020&#8211;37277399</string>
    <string name="system_update">System update</string>
    <string name="about_us">About us</string>
    <string name="language_setting">Language Setting</string>
    <string name="default_language">Default(默认）</string>
    <string name="english_language">English(英语）</string>
    <string name="chinese_language">Chinese(简体中文）</string>
    <string name="system_version">System Version</string>
    <string name="newest">(Newest)</string>
    <string name="search_your_favourite">Search</string>
    <string name="hot_topic">Hot topic</string>
    <string name="newest_topic">Latest topic</string>
    <string name="my_topic">My topic</string>
    <string name="issue">Add Topic</string>
    <string name="release">Release</string>
    <string name="device">Device</string>
    <string name="add_device">Add Device</string>
    <string name="bluetooth_version">Bluetooth Version</string>
    <string name="wifi_version">WIFI Version</string>
    <string name="link">Connect</string>
    <string name="link_wifi">Connect WIFI</string>
    <string name="wifi_page_1_content1">
    In the off state, press and hold the button for about 10 seconds\n
    until the indicator light turns blue, that is, the reset is successful.</string>
    <string name="wifi_page_1_content2">After the operation, you will see the blue light flashing.</string>
    <string name="wifi_page_2_content">After pressing the scan code button,\n
    please scan the QR code at the bottom of the cup with your mobile phone.</string>
    <string name="next_step">Next Step</string>
    <string name="scan">Scan</string>
    <string name="link_by_hand">manual connect</string>
    <string name="input_ssid">manual input ssid</string>
    <string name="dont_know_version"><u>If you don\'t know what version it is?</u></string>
    <string name="cant_find_your_cup">Didn\'t find your cup?<u>Find more</u></string>
    <string name="not_support_bluetooth">Phone not support bluetooth</string>
    <string name="need_permission">Need permission</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="drink_every_title">Daily water consumption</string>
    <string name="cup">%dCup</string>
    <string name="start_electrolysis">Start electrolysis</string>
    <string name="stop_electrolysis">Stop electrolysis</string>
    <string name="electrolyzing">Electrolyzing</string>
    <string name="cleaning">Cleaning</string>
    <string name="device_manager">Device Management</string>
    <string name="electric">Battery</string>
    <string name="device_name">Device Name</string>
    <string name="cup_color">Color</string>
    <string name="device_status">Status</string>
    <string name="handle_time">Processing Time</string>
    <string name="bind">Online</string>
    <string name="clean_notice_title">Cleaning precautions</string>
    <string name="clean_notice_content">1.The anti-cleaning time takes 5 minutes and the red light of the cup flashes over whole process;\n
    2.After the end of the anti-cleaning, the red light in the cup is always on, please turn off the cup immediately and pour off the water;\n
    3. Do not use anti-cleaning function when the battery is less than 20%</string>
    <string name="clean_notice_stop">Don’t clean</string>
    <string name="clean_notice_know">Noted</string>
    <string name="notice_warning">Attention: Do not turn off the cup during cleaning</string>
    <string name="close_clean">Stop Cleaning</string>
    <string name="hint">Notice</string>
    <string name="clean_hint_content">1.After the cup is cleaned, please pour off the water and re-add the drinking water for electrolysis!\n
    2.This window will disappear automatically after you restart the cup!</string>
    <string name="light_setting">Light Setting</string>
    <string name="brightness_setting">Adjust light brightness</string>
    <string name="link_wifi_by_hand_course">跳出此app到手机设定——WiFi——选择H2-popo-301——然后再跳回此app</string>
    <string name="trying_connect">Connecting：%s</string>
    <string name="failure_connect_wifi">Connect failure</string>
    <string name="success_connect_wifi">Connect success, reading message</string>
    <string name="click_to_choose_wifi">Select Wi-Fi network</string>
    <string name="wifi_password">WiFi Password</string>
    <string name="success_setting_wifi">Connect Success</string>
    <string name="disconnect">Disconnect</string>
    <string name="failure_to_mqtt">Connect Mqtt failure</string>
    <string name="score_market">积分商城</string>
    <string name="old_change_new">以旧换新</string>
    <string name="old_change_new_price">以旧换新价格</string>
    <string name="crowd_funding">众筹</string>
    <string name="my_orders">我的订单</string>
    <string name="known_error">未知错误</string>
    <string name="score_number">%s积分</string>
    <string name="price_number">%s元</string>
    <string name="del_price_number"><![CDATA[<del> %s元 </del>]]></string>
    <string name="day_number">%sDay</string>
    <string name="leave_day_number">剩余%s天</string>
    <string name="will_start_at">%s开始</string>
    <string name="activity_over">活动已结束</string>
    <string name="residue_count">剩余%d件</string>
    <string name="market_reference_price_value"><![CDATA[市场参考价:<del>%s元</del>]]></string>
    <string name="commodity_details">商品详情</string>
    <string name="consignee">收货人</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="area">所在地区</string>
    <string name="choose_area">选择地区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_detail_hint">为准确送达请具体到街道门牌号</string>
    <string name="tracking_number">快递单号</string>
    <string name="please_input_tracking_number">请填入快递单号</string>
    <string name="affirm_tracking_number">确认发货</string>
</resources>