<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/phone_number"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/et_input_phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/please_input_phone_number"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_verification_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/verification_code"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    <EditText
        android:id="@+id/et_input_verification_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/please_input_verification_code"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_verification_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/get_verification_code"
        android:textColor="@color/colorRed"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/et_input_verification_code"
        app:layout_constraintRight_toRightOf="@id/et_input_verification_code"
        app:layout_constraintTop_toTopOf="@id/et_input_verification_code" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/new_password"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_code" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_double_check_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/double_check_password"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <EditText
        android:id="@+id/et_password_doubleinput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/please_input_password_again"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_double_check_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>