<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/actionbar_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:src="@mipmap/m_back"
        app:layout_constraintBottom_toBottomOf="@id/actionbar_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/actionbar_title" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="70dp"
        android:hint="@string/please_input_phone_number"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbar_title" />

    <EditText
        android:id="@+id/et_verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/please_input_verification_code"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_phone_number"
        app:layout_constraintRight_toRightOf="@id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

    <TextView
        android:id="@+id/get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/get_verification_code"
        android:textColor="@color/colorRed"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/et_verification_code"
        app:layout_constraintRight_toRightOf="@id/et_verification_code"
        app:layout_constraintTop_toTopOf="@id/et_verification_code" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_verification_code"
        app:layout_constraintRight_toRightOf="@id/et_verification_code"
        app:layout_constraintTop_toBottomOf="@id/et_verification_code" />

    <TextView
        android:id="@+id/tv_i_agree_qingpaopao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/i_agree_qingpaopao"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/user_agreement"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_i_agree_qingpaopao"
        app:layout_constraintLeft_toRightOf="@id/tv_i_agree_qingpaopao" />

    <TextView
        android:id="@+id/tv_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_i_agree_qingpaopao"
        app:layout_constraintLeft_toRightOf="@id/tv_user_agreement" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_i_agree_qingpaopao"
        app:layout_constraintLeft_toRightOf="@id/tv_and" />


    <Button
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_bt_login"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_phone_number"
        app:layout_constraintRight_toRightOf="@id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@id/tv_i_agree_qingpaopao" />

</android.support.constraint.ConstraintLayout>