<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_consignee"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/consignee"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_consignee"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/please_input_real_name"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_consignee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/phone_number"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_consignee" />

    <EditText
        android:id="@+id/et_input_phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/please_input_phone_number"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_area_key"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/area"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    <TextView
        android:id="@+id/tv_area_value"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginLeft="110dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:text="@string/choose_area"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_area_key"
        app:layout_constraintLeft_toLeftOf="@+id/tv_area_key"
        app:layout_constraintRight_toRightOf="@+id/tv_area_key"
        app:layout_constraintTop_toTopOf="@+id/tv_area_key" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:src="@mipmap/n_arrow"
        app:layout_constraintBottom_toBottomOf="@id/tv_area_value"
        app:layout_constraintRight_toRightOf="@id/tv_area_value"
        app:layout_constraintTop_toTopOf="@id/tv_area_value" />


    <TextView
        android:id="@+id/tv_address_detail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/address_detail"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_area_value" />

    <EditText
        android:id="@+id/et_address_detail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/address_detail_hint"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_address_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_bt_accent"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="13:2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address_detail" />

</android.support.constraint.ConstraintLayout>