<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="70dp"
        android:hint="@string/please_input_phone_number"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/please_input_verification_code"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_phone_number"
        app:layout_constraintRight_toRightOf="@id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

    <TextView
        android:id="@+id/get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/get_verification_code"
        android:textColor="@color/colorRed"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/et_verification_code"
        app:layout_constraintRight_toRightOf="@id/et_verification_code"
        app:layout_constraintTop_toTopOf="@id/et_verification_code" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_verification_code"
        app:layout_constraintRight_toRightOf="@id/et_verification_code"
        app:layout_constraintTop_toBottomOf="@id/et_verification_code" />

    <EditText
        android:id="@+id/et_password_doubleinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/please_input_password_again"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_password"
        app:layout_constraintRight_toRightOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password" />


    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_bt_accent"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/et_password_doubleinput"
        app:layout_constraintRight_toRightOf="@id/et_password_doubleinput"
        app:layout_constraintTop_toBottomOf="@id/et_password_doubleinput" />

</android.support.constraint.ConstraintLayout>