<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tracking_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/tracking_number"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_tracking_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@null"
        android:hint="@string/please_input_tracking_number"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_tracking_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_bt_accent"
        android:text="@string/affirm_tracking_number"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="13:2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tracking_number" />

</android.support.constraint.ConstraintLayout>